--- a/components/experiment/Experiment.module.css
+++ b/components/experiment/Experiment.module.css
@@ -843,8 +843,7 @@
     /* Hide layout chrome */
     .sidebar,
     .mobileNav,
-    .printButton,
-    .noPrint {
+    .printButton {
         display: none !important;
     }
 
